Minor addition to help file. Hope to felsh it out soon.

--- a/Obi/Obi/help_en.html
+++ b/Obi/Obi/help_en.html
@@ -212,7 +212,6 @@
         </div>
         <p>There is another dialog to edit metadata which allows you to add and remove more metadata items. Select <q>Full metadata</q> in the <q>Edit menu</q> to edit this dialog.</p>
         <p class="todo">There is a lot of work going on in this dialog. It will also be merged with the the simple view to create a single dialog for all the metadata editing in the project. A screenshot will be provided when the design is more stable.</p>          
-        </p>
       </div>
       <div id="editing-toc">
         <h3>Editing the table of contents</h3>
@@ -514,6 +513,23 @@
           <p class="wwwvisible"><a rel="external" href="images/manual_record.png" title="full-size screenshot"><img src="images/manual_record.png" alt="the record dialog"/></a></p>
         </div>
         <p class="todo">Describe the dialog. Start listening, press record to record. Create a new phrase with phrase button, new page with page. Explain VU meter too btw.</p>
+          <p>
+              Obi has 3 recording modes to choose from: Dialog based recording, inline recording
+              with insertion and inline recording with truncation. The selection in the strips
+              view determine where recording starts.</p>
+          <h5>
+              Dialog based recording.</h5>
+          <p class="todo">
+              Mention: Can't be started during playback. Opens dialog, reducing the number of
+              elements on the form. VU meter on dialog. Page marking. Phrase marking.</p>
+          <h5>
+              Inline insertion recording.</h5>
+          <p class="todo">
+              Mention: Disables many menu items. Changes behavior of buttons on transport bar.</p>
+          <h5>
+              Inline destructive recording</h5>
+          <p class="todo">
+              Mention: Same as "insertion", but clears the rest of the section content</p>
         <div id="nav-phrases">
           <h4>Navigating through phrases</h4>
           <p><img src="images/icons/go-previous.png" alt="move to previous phrase icon" class="icon"/><img src="images/icons/go-next.png" alt="move to next phrase icon" class="icon"/>You can move from phrase to phrase in the book, <em>i.e.</em> from audio block to audio block, using the <q>previous phrase</q> and <q>next phrase</q> buttons in the transport bar, or the left and right arrow keys.</p>
