--- a/misc/test xhtml import/importTest-valid.html
+++ b/misc/test xhtml import/importTest-valid.html
@@ -13,30 +13,30 @@
 	<p>blah blah blah</p>
 	
 	<h1>Section <span>1</span></h1>
-	<p><span class="page">i</span>
-<span class="page">ii</span></p>
-	<p>blah blah blah <span class="page">iii</span></p>
+	<p><span class="page">ii</span>
+<span class="page">2</span></p>
+	<p>blah blah blah <span class="page">3</span></p>
 	<h2>Section 1.1</h2>
-	<p class="page">iv</p>
-	<p>blah blah blah</p><p class="page">1</p><p>blah <span class="page">2</span> blah blah</p><p>blah blah blah</p>
+	<p class="page">4</p>
+	<p>blah blah blah</p><p class="page">5</p><p>blah <span class="page">6</span> blah blah</p><p>blah blah blah</p>
 	<h3>Section 1.1.1</h3>
 	<p>
-		<span class="page">3</span>
-		<span class="page">4</span>
+		<span class="page">7</span>
+		<span class="page">8</span>
 	</p>
 	<h3>Section 1.1.2</h3>
-	<p>blah blah blah <span class="page">5</span></p><p>blah blah blah</p>
+	<p>blah blah blah <span class="page">9</span></p><p>blah blah blah</p>
 	<h4>Section 1.1.2.1</h4>
 	<p>blah blah blah</p>
 	<h5>Section 1.1.2.1.1</h5>
 	<h5>Section 1.1.2.1.2</h5>
 	<h6>Section 1.1.2.1.2.1</h6>
-	<p>blah blah blah</p><p><span class="page">banana</span>blah blah blah</p><p>blah blah blah</p>
+	<p>blah blah blah</p><p><span class="page">10</span>blah blah blah</p><p>blah blah blah</p>
 	<h3>Section 1.1.3</h3>
 	<h2>Section 1.2</h2>
 	<h2>Section 1.3</h2>
 	<h1>Section 2</h1>
-	<p>blah blah blah <span class="not-a-page">47</span></p><p>blah blah blah</p>
+	<p>blah blah blah <span class="not-a-page">44</span></p><p>blah blah blah</p>
 	<h2>Section 2.1</h2>
 	<h1>Section 3</h1>
 	<h1>Section 4</h1>
