--- a/trunk/Obi/Obi/about_en.html
+++ b/trunk/Obi/Obi/about_en.html
@@ -11,7 +11,7 @@
     <p>Website: <a href="http://urakawa.sf.net/obi">http://urakawa.sf.net/obi</a></p>
     <p>Contributors (in alphabetical order): Ole Holst Andersen, Romain Deltour, Marisa DeMeglio,
     Markus Gylling, Dipendra Manocha, Laust Skat Nielsen, Julien Quint, Suman Sharma, Avneesh Singh,
-    Daniel Weck.</p>
+    Jennifer Sutton, Daniel Weck.</p>
     <p>Released under the <a href="http://www.gnu.org/licenses/lgpl.html">GNU LGPL</a>.</p>
     <p style="text-align:center"><img src="images/obird256.png" alt="Obird, the icon of Obi"/></p>
   </body>
