--- a/Obi/Obi/about_en.html
+++ b/Obi/Obi/about_en.html
@@ -4,15 +4,16 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>About Obi</title>
+    <link rel="stylesheet" href="help.css" type="text/css"/>
   </head>
   <body style="background-color: white; color: black">
-    <p><span id="info-version">VERSION</span> (<span id="real-version">VERSION</span>)</p>
+    <h1><img src="images/obird_right_48.png" alt=""/>Obi</h1>
+    <p>This is <span id="info-version">VERSION</span> (<span id="real-version">VERSION</span>)</p>
     <p>Copyright &copy; 2005-2008 The Urakawa Project</p>
-    <p>Website: <a href="http://urakawa.sf.net/obi">http://urakawa.sf.net/obi</a></p>
+    <p>Website: <a id="website"></a></p>
     <p>Contributors (in alphabetical order): Ole Holst Andersen, Romain Deltour, Marisa DeMeglio,
     Markus Gylling, Dipendra Manocha, Laust Skat Nielsen, Julien Quint, Suman Sharma, Avneesh Singh,
     Jennifer Sutton, Daniel Weck.</p>
     <p>Released under the <a href="http://www.gnu.org/licenses/lgpl.html">GNU LGPL</a>.</p>
-    <p style="text-align:center"><img src="images/obird256.png" alt="Obird, the icon of Obi"/></p>
   </body>
 </html>
