Updated images in the help file and version number in the installer. Missing wavefiles?!

--- a/Obi/Obi/help_en.html
+++ b/Obi/Obi/help_en.html
@@ -112,7 +112,7 @@ Open Obi, and create a new project (<tt>File &gt; New project</tt>, or <tt>Ctrl+
 Every DAISY book must have a unique identifier. Your organization may already have a scheme to allocate unique identifiers to new projects; otherwise, Obi can generate one for you. If you are not sure, you can use the default value provided by Obi. The unique identifier can be set in the textbox labelled <tt>ID</tt>; you can edit it later by setting the <tt>dc:Identifier</tt> value in the Metadata view.
 </p>
 <p>
-<a style="padding:0; border:none" href="/obi/attachment/wiki/User%20manual/obi_new_project_dialog.png"><img src="/obi/attachment/wiki/User%20manual/obi_new_project_dialog.png?format=raw" alt="New project dialog" title="New project dialog" /></a>
+<a style="padding:0; border:none" href="images/obi_new_project_dialog.png"><img src="images/obi_new_project_dialog.png?format=raw" alt="New project dialog" title="New project dialog" /></a>
 </p>
 <p>
 Alternatively, you can create a new project by importing an existing structure from an XHTML source document containing headings (<tt>h1</tt> through <tt>h6</tt>) and pages (<tt>span</tt>); choose <tt>File &gt; New project from import</tt> or press <tt>Ctrl+Shift+N</tt>. You can choose a title for your project (which defaults to the <tt>title</tt> value in the XHTML file) and a location for saving it.
@@ -122,7 +122,7 @@ You can save your project at any time (<tt>File &gt; Save project</tt> or <tt>Ct
 </p>
 <h4 id="EditingtheTableofContents">Editing the Table of Contents</h4>
 <p>
-<a style="padding:0; border:none" href="/obi/attachment/wiki/User%20manual/obi_toc_view.jpg"><img src="/obi/attachment/wiki/User%20manual/obi_toc_view.jpg?format=raw" alt="The TOC tree view" title="Obi TOC View" /></a> 
+<a style="padding:0; border:none" href="images/obi_toc_view.jpg"><img src="images/obi_toc_view.jpg?format=raw" alt="The TOC tree view" title="Obi TOC View" /></a> 
 </p>
 <p>
 You can then create or modify the main structure elements in the TOC view by the following commands:
@@ -148,7 +148,7 @@ After creating sections, audio can be added to these sections either by live rec
 Select the section that you want to record in in the contents view and click on the record button in the transport bar, or press <tt>Ctrl+R</tt> for starting pre-recording monitoring. 
 </p>
 <p>
-<a style="padding:0; border:none" href="/obi/attachment/wiki/User%20manual/obi_tbar_pre_rec.jpg"><img src="/obi/attachment/wiki/User%20manual/obi_tbar_pre_rec.jpg?format=raw" alt="The transport bar while pre-record monitoring" title="Obi Transport Bar while pre-record monitoring" /></a>
+<a style="padding:0; border:none" href="images/obi_tbar_pre_rec.jpg"><img src="images/obi_tbar_pre_rec.jpg?format=raw" alt="The transport bar while pre-record monitoring" title="Obi Transport Bar while pre-record monitoring" /></a>
 </p>
 <p>
 The amplitude of the microphone input will be displayed in the graphical peak meter (which can be shown or hidden by the command <tt>View &gt; Show peak meter</tt>, or <tt>Ctrl+Alt+P</tt>) as well as a text peak meter located in the transport bar. You can then change the settings for your microphone through system settings. You should set your recording level so that the audio level is loud enough to be heard comfortably, but not so loud as to create clipping and distortion. You should also try to maintain the volume consistently throughout the book.
@@ -174,7 +174,7 @@ After recording, contents can be edited more finely. You can navigate through th
 Phrases can be <i>split</i> and <i>merged</i>. To split a phrase in two, select a phrase and play it using the play button in the transport bar or by pressing the space bar. Pause at the time where the phrase should be split (by pressing the pause button in the transport bar or the space bar again), then choose <tt>Phrases &gt; Split phrase</tt> (<tt>Ctrl+Q</tt>). 
 </p>
 <p>
-<a style="padding:0; border:none" href="/obi/attachment/wiki/User%20manual/obi_phrase_and_cursor.jpg"><img src="/obi/attachment/wiki/User%20manual/obi_phrase_and_cursor.jpg?format=raw" alt="A selected phrase with the cursor positioned at an appropriate split position" /></a>
+<a style="padding:0; border:none" href="images/obi_phrase_and_cursor.jpg"><img src="images/obi_phrase_and_cursor.jpg?format=raw" alt="A selected phrase with the cursor positioned at an appropriate split position" /></a>
 </p>
 <p>
 A new phrase is created following the current phrase, and the audio following the split point is moved to the new phrase. The converse operation is merging two phrases: select a phrase, then choose <tt>Phrase &gt; Merge phrase with next</tt> (<tt>Ctrl+M</tt>) to merge the audio of the selected phrase with the next one into a single phrase.
@@ -196,7 +196,7 @@ Note that in the Content View, the area <i>before</i> and <i>after</i> a phrase 
 Pages can be marked by selecting a phrase and choosing <tt>Phrases &gt; Assign role &gt; Page</tt>, or <tt>Alt+P, A, P</tt>. A dialog is then presented to input a page number, with the option to automatically renumber the following pages. 
 </p>
 <p>
-<a style="padding:0; border:none" href="/obi/attachment/wiki/User%20manual/obi_set_pagenumber_dialog.jpg"><img src="/obi/attachment/wiki/User%20manual/obi_set_pagenumber_dialog.jpg?format=raw" alt="The Set Page Number dialog" /></a>
+<a style="padding:0; border:none" href="images/obi_set_pagenumber_dialog.jpg"><img src="images/obi_set_pagenumber_dialog.jpg?format=raw" alt="The Set Page Number dialog" /></a>
 </p>
 <p>
 Other roles can also be marked in the same way; for instance, you can set a phrase to be the audio heading for a section by choosing <tt>Phrases &gt; Assign role &gt; Heading</tt>, or <tt>Alt+P, A, H</tt> (by default, the first phrase of a section is the audio heading.)
@@ -206,7 +206,7 @@ Other roles can also be marked in the same way; for instance, you can set a phra
 Before publishing your project, you should fill out as much of the metadata as possible. First, make sure that the metadata view is visible (<tt>View &gt; Show metadata view</tt>, or <tt>Ctrl+Alt+M</tt>.) You can reach it by using <tt>Ctrl+Tab</tt>.
 </p>
 <p>
-<a style="padding:0; border:none" href="/obi/attachment/wiki/User%20manual/obi_meta_editor_small.jpg"><img src="/obi/attachment/wiki/User%20manual/obi_meta_editor_small.jpg?format=raw" alt="The metadata editor" /></a>
+<a style="padding:0; border:none" href="images/obi_meta_editor_small.jpg"><img src="images/obi_meta_editor_small.jpg?format=raw" alt="The metadata editor" /></a>
 </p>
 <h4 id="ExportingtoDAISY">Exporting to DAISY</h4>
 <p>
@@ -309,7 +309,7 @@ Select a on your computers harddrive that Obi will suggest as a destination dire
 If this checkbox is checked, Obi will automatically open the last used project on startup.
 </dd></dl>
 <p>
-<a style="padding:0; border:none" href="/obi/attachment/wiki/User%20manual/obi_prefs_project.jpg"><img src="/obi/attachment/wiki/User%20manual/obi_prefs_project.jpg?format=raw" alt="Project Preferences" title="Projects Preferences Dialog" /></a>
+<a style="padding:0; border:none" href="images/obi_prefs_project.jpg"><img src="images/obi_prefs_project.jpg?format=raw" alt="Project Preferences" title="Projects Preferences Dialog" /></a>
 </p>
 <h4 id="AudioPreferences">Audio Preferences</h4>
 <p>
@@ -339,7 +339,7 @@ Audio clues::
 Enables/disables audio clues. Audio clues are some audio signals which provide audio feedback for non visual users. 
 </p>
 <p>
-<a style="padding:0; border:none" href="/obi/attachment/wiki/User%20manual/obi_prefs_audio.jpg"><img src="/obi/attachment/wiki/User%20manual/obi_prefs_audio.jpg?format=raw" alt="Audio Preferences" title="Audio Preferences Dialog" /></a>
+<a style="padding:0; border:none" href="images/obi_prefs_audio.jpg"><img src="images/obi_prefs_audio.jpg?format=raw" alt="Audio Preferences" title="Audio Preferences Dialog" /></a>
 </p>
 <h4 id="UserProfilePreferences">User Profile Preferences</h4>
 <dl><dt>Full name</dt><dd>
@@ -350,7 +350,7 @@ Organisation of the user.
 The language of the user (<i>which is not always the same as the language of the DTB being recorded</i>). Remember that you should use the Metadata view to enter information about the language of the DTBs being produced.
 </dd></dl>
 <p>
-<a style="padding:0; border:none" href="/obi/attachment/wiki/User%20manual/obi_prefs_user_profile.jpg"><img src="/obi/attachment/wiki/User%20manual/obi_prefs_user_profile.jpg?format=raw" alt="User Profile Preferences" title="User Profile Preferences Dialog" /></a>
+<a style="padding:0; border:none" href="images/obi_prefs_user_profile.jpg"><img src="images/obi_prefs_user_profile.jpg?format=raw" alt="User Profile Preferences" title="User Profile Preferences Dialog" /></a>
 </p>
 <p>
  
