--- a/trunk/Obi/Obi/about_hi.html
+++ b/trunk/Obi/Obi/about_hi.html
@@ -2,12 +2,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+  <!-- Note to translators: please do not translate the word VERSION
+  as it will be replaced by the actual version number when Obi runs. -->
   <head>
-    <title>About Obi (HINDI)</title>
+    <title>ओबी के बारे में</title>
     <link rel="stylesheet" href="help.css" type="text/css"/>
   </head>
   <body style="background-color: white; color: black">
-    <h1><img src="images/obird_right_48.png" alt=""/>Obi (HINDI)</h1>
+    <h1><img src="images/obird_right_48.png" alt=""/>ओबी के बारे में</h1>
     <p>This is <span id="info-version">VERSION</span> (<span id="real-version">VERSION</span>)</p>
     <p>Copyright &copy; 2005-2008 The Urakawa Project</p>
     <p>Website: <a id="website"></a></p>
