--- a/trunk/misc/test xhtml import/importTest-valid-pages.html
+++ b/trunk/misc/test xhtml import/importTest-valid-pages.html
@@ -13,16 +13,16 @@
 	<p>blah blah blah</p>
 	
 	<h1>Section <span>1</span></h1>
-	<p><span class="page">1</span>
-<span class="page">2</span></p>
-	<p>blah blah blah <span class="page">3</span></p>
+	<p><span class="page-front">1</span>
+	<span class="page-front">2</span></p>
+	<p>blah blah blah <span class="page-front">3</span></p>
 	<h2>Section 1.1</h2>
-	<p class="page">4</p>
-	<p>blah blah blah</p><p class="page">1</p><p>blah <span class="page">2</span> blah blah</p><p>blah blah blah</p>
+	<p class="page">1</p>
+	<p>blah blah blah</p><p class="page">2</p><p>blah <span class="page">2</span> blah blah</p><p>blah blah blah</p>
 	<h3>Section 1.1.1</h3>
 	<p>
-		<span class="page">5</span>
-		<span class="page">6</span>
+		<span class="page-normal">3</span>
+		<span class="page-special">A-1</span>
 	</p>
 	<h3>Section 1.1.2</h3>
 	<p>blah blah blah <span class="page">7</span></p><p>blah blah blah</p>
