--- a/trunk/Obi/Obi/about_en.html
+++ b/trunk/Obi/Obi/about_en.html
@@ -12,8 +12,8 @@
     <p>Copyright &copy; 2005-2008 The Urakawa Project</p>
     <p>Website: <a id="website"></a></p>
     <p>Contributors (in alphabetical order): Ole Holst Andersen, Romain Deltour, Marisa DeMeglio,
-    Markus Gylling, Dipendra Manocha, Laust Skat Nielsen, Julien Quint, Suman Sharma, Avneesh Singh,
-    Jennifer Sutton, Daniel Weck.</p>
+    Markus Gylling, Sandeep Kaler, Jasdeep Kaur, Dipendra Manocha, Chhavi Negi, Laust Skat Nielsen, Julien Quint, Suman Sharma, Avneesh Singh,
+    Rachana Singh, Jennifer Sutton, Prashant Verma, Daniel Weck.</p>
     <p>Released under the <a href="http://www.gnu.org/licenses/lgpl.html">GNU LGPL</a>.</p>
   </body>
 </html>
