about obi info committed.

--- a/Obi/Obi/about_en.html
+++ b/Obi/Obi/about_en.html
@@ -9,11 +9,15 @@
   <body style="background-color: white; color: black">
     <h1><img src="images/obird_right_48.png" alt=""/>Obi</h1>
     <p>This is <span id="info-version">VERSION</span> (<span id="real-version">VERSION</span>)</p>
-    <p>Copyright &copy; 2005-2008 The Urakawa Project</p>
+    <p>Copyright (c) 2008 The DAISY Consortium</p>
     <p>Website: <a id="website"></a></p>
-    <p>Contributors (in alphabetical order): Ole Holst Andersen, Romain Deltour, Marisa DeMeglio,
-    Markus Gylling, Sandeep Kaler, Jasdeep Kaur, Dipendra Manocha, Chhavi Negi, Laust Skat Nielsen, Julien Quint, Suman Sharma, Avneesh Singh,
-    Rachana Singh, Jennifer Sutton, Prashant Verma, Daniel Weck.</p>
+    <p>Contributors (in alphabetical order):<p>
+<ul>
+<li><a HREF="http://www.cwi.nl/"> CWI</a> from Netherlands</li>
+ <li><a HREF="http://www.inria.fr/">INRIA</a> from France</li>
+ <li><a HREF="http://www.rehab.go.jp/">NRCD</a> from Japan</li>  
+</ol>
+
     <p>Released under the <a href="http://www.gnu.org/licenses/lgpl.html">GNU LGPL</a>.</p>
   </body>
 </html>
