--- a/trunk/Obi/Obi/ProfileDesc_en.html
+++ b/trunk/Obi/Obi/ProfileDesc_en.html
@@ -345,12 +345,12 @@
   <td>If checked, Obi will save the current state of audio zoom across Obi sessions. </td>
 </tr>
 <tr>
-  <td>Select the last phrase played</td>
-  <td>If checked, last phrase will be selected after playlist is played</td>
+  <td>After playback, select the last phrase played</td>
+  <td>If checked, Obi moves the focus to the last phrase played in the playback when playback stops. Otherwise, the focus remains on the phrase from where playback was started.</td>
 </tr>
 <tr>
-  <td>Show selection time in Transport Bar in stop state</td>
-  <td>If checked, Timer in transport bar will show elapsed and remaining time in phrase and elapsed time in section during stop state.</td>
+  <td>Show cursor time in Transport Bar in stop state</td>
+  <td>If checked, the Time Display field of Transport Bar shows the current cursor time in the stopped state. Otherwise, this field will always show 0 in the stopped state. Please note that this feature works only for the Elapsed in phrase and the Elapsed in Section options of Time Display.</td>
 </tr>
 </table>
 <p>Project Tab:-</p>
@@ -437,7 +437,7 @@
 </tr>
 <tr>
   <td>Fix TOC View width</td>
-  <td>If checked, On resizing of Obi TOC View width remains fixed.</td>
+  <td>If checked, Obi freezes the current width of TOC view; hence disallowing automatic or manual adjustments to it.</td>
 </tr>
 </table>
 </div>   
@@ -613,12 +613,12 @@
   <td>If checked, the next heading and next page commands will move to the respective item and continue recording into it, but they will not create a new heading or page.</td>
 </tr>
 <tr>
-  <td>Select the last phrase played</td>
-  <td>If checked, last phrase will be selected after playlist is played</td>
+  <td>After playback, select the last phrase played</td>
+  <td>If checked, Obi moves the focus to the last phrase played in the playback when playback stops. Otherwise, the focus remains on the phrase from where playback was started.</td>
 </tr>
 <tr>
-  <td>Show selection time in Transport Bar in stop state</td>
-  <td>If checked, Timer in transport bar will show elapsed and remaining time in phrase and elapsed time in section during stop state.</td>
+  <td>Show cursor time in Transport Bar in stop state</td>
+  <td>If checked, the Time Display field of Transport Bar shows the current cursor time in the stopped state. Otherwise, this field will always show 0 in the stopped state. Please note that this feature works only for the Elapsed in phrase and the Elapsed in Section options of Time Display.</td>
 </tr>
 </table>
 <p>Project Tab:-</p>
@@ -770,12 +770,12 @@
   <td>If checked, the next heading and next page commands will move to the respective item and continue recording into it, but they will not create a new heading or page.</td>
 </tr>
 <tr>
-  <td>Select the last phrase played</td>
-  <td>If checked, last phrase will be selected after playlist is played</td>
+  <td>After playback, select the last phrase played</td>
+  <td>If checked, Obi moves the focus to the last phrase played in the playback when playback stops. Otherwise, the focus remains on the phrase from where playback was started.</td>
 </tr>
 <tr>
-  <td>Show selection time in Transport Bar in stop state</td>
-  <td>If checked, Timer in transport bar will show elapsed and remaining time in phrase and elapsed time in section during stop state.</td>
+  <td>Show cursor time in Transport Bar in stop state</td>
+  <td>If checked, the Time Display field of Transport Bar shows the current cursor time in the stopped state. Otherwise, this field will always show 0 in the stopped state. Please note that this feature works only for the Elapsed in phrase and the Elapsed in Section options of Time Display.</td>
 </tr>
 </table>
 <p>Project Tab:-</p>
@@ -927,8 +927,8 @@
   <td>If checked, the next heading and next page commands will move to the respective item and continue recording into it, but they will not create a new heading or page.</td>
 </tr>
 <tr>
-  <td>Show selection time in Transport Bar in stop state</td>
-  <td>If checked, Timer in transport bar will show elapsed and remaining time in phrase and elapsed time in section during stop state.</td>
+  <td>Show cursor time in Transport Bar in stop state</td>
+  <td>If checked, the Time Display field of Transport Bar shows the current cursor time in the stopped state. Otherwise, this field will always show 0 in the stopped state. Please note that this feature works only for the Elapsed in phrase and the Elapsed in Section options of Time Display.</td>
 </tr>
 </table>
 <p>Project Tab:-</p>
