--- a/trunk/Obi/Obi/ProfileDesc_en.html
+++ b/trunk/Obi/Obi/ProfileDesc_en.html
@@ -352,6 +352,10 @@
   <td>Show cursor time in Transport Bar in stop state</td>
   <td>If checked, the Time Display field of Transport Bar shows the current cursor time in the stopped state. Otherwise, this field will always show 0 in the stopped state. Please note that this feature works only for the Elapsed in phrase and the Elapsed in Section options of Time Display.</td>
 </tr>
+<tr>
+  <td>Record in first empty phrase with record section command</td>
+  <td>If checked, Obi will start recording from the first phrase of the section when selection is at section level</td>
+</tr>
 </table>
 <p>Project Tab:-</p>
 <table  border="3">
@@ -438,6 +442,14 @@
 <tr>
   <td>Fix TOC View width</td>
   <td>If checked, Obi freezes the current width of TOC view; hence disallowing automatic or manual adjustments to it.</td>
+</tr>
+<tr>
+  <td>Show advance properties in properties dialog</td>
+  <td>If checked, advance properties like "Project file count" will be shown in project properties dialog</td>
+</tr>
+<tr>
+  <td>Warn before section manipulation</td>
+  <td>If checked,user will be warned before edit operations like Rename,Cut,Paste and Delete</td>
 </tr>
 </table>
 </div>   
@@ -552,6 +564,10 @@
   <td>Timeout EPUB check process after 3 mins</td>
   <td>If checked, Obi terminates EPUB Check Validator in 3 minutes, which is ample time for validating even a large book. This ensures that the process doesn’t hang up in case of an error.</td>
 </tr>
+<tr>
+  <td>Show advance properties in properties dialog</td>
+  <td>If checked, advance properties like "Project file count" will be shown in project properties dialog</td>
+</tr>
 </table>
 </div> 
 
@@ -619,6 +635,10 @@
 <tr>
   <td>Show cursor time in Transport Bar in stop state</td>
   <td>If checked, the Time Display field of Transport Bar shows the current cursor time in the stopped state. Otherwise, this field will always show 0 in the stopped state. Please note that this feature works only for the Elapsed in phrase and the Elapsed in Section options of Time Display.</td>
+</tr>
+<tr>
+  <td>Record in first empty phrase with record section command</td>
+  <td>If checked, Obi will start recording from the first phrase of the section when selection is at section level</td>
 </tr>
 </table>
 <p>Project Tab:-</p>
@@ -694,6 +714,14 @@
 <tr>
   <td>Enlarge phrases as per increase in screen resolution</td>
   <td>If checked, Obi enlarges the phrases with the increase in screen resolution to preserve their orientation in the Content view. This results in improved efficiency as it prevents accumulation of large number of waveforms in the view.</td>
+</tr>
+<tr>
+  <td>Show advance properties in properties dialog</td>
+  <td>If checked, advance properties like "Project file count" will be shown in project properties dialog</td>
+</tr>
+<tr>
+  <td>Warn before section manipulation</td>
+  <td>If checked,user will be warned before edit operations like Rename,Cut,Paste and Delete</td>
 </tr>
 </table>
 </div> 
@@ -777,6 +805,10 @@
   <td>Show cursor time in Transport Bar in stop state</td>
   <td>If checked, the Time Display field of Transport Bar shows the current cursor time in the stopped state. Otherwise, this field will always show 0 in the stopped state. Please note that this feature works only for the Elapsed in phrase and the Elapsed in Section options of Time Display.</td>
 </tr>
+<tr>
+  <td>Record in first empty phrase with record section command</td>
+  <td>If checked, Obi will start recording from the first phrase of the section when selection is at section level</td>
+</tr>
 </table>
 <p>Project Tab:-</p>
 <table  border="3">
@@ -851,6 +883,14 @@
 <tr>
   <td>Enlarge phrases as per increase in screen resolution</td>
   <td>If checked, Obi enlarges the phrases with the increase in screen resolution to preserve their orientation in the Content view. This results in improved efficiency as it prevents accumulation of large number of waveforms in the view.</td>
+</tr>
+<tr>
+  <td>Show advance properties in properties dialog</td>
+  <td>If checked, advance properties like "Project file count" will be shown in project properties dialog</td>
+</tr>
+<tr>
+  <td>Warn before section manipulation</td>
+  <td>If checked,user will be warned before edit operations like Rename,Cut,Paste and Delete</td>
 </tr>
 </table>
 </div>  
@@ -1004,6 +1044,10 @@
 <tr>
   <td>Enlarge phrases as per increase in screen resolution</td>
   <td>If checked, Obi enlarges the phrases with the increase in screen resolution to preserve their orientation in the Content view. This results in improved efficiency as it prevents accumulation of large number of waveforms in the view.</td>
+</tr>
+<tr>
+  <td>Show advance properties in properties dialog</td>
+  <td>If checked, advance properties like "Project file count" will be shown in project properties dialog</td>
 </tr>
 </table>
 </div>  
