1)Show advance properties in be checked advance profile. 2) Record in first empty phrase with record section command checked in VA-Editing. 3)Warn before section manipulation checked in VA-Editing. 4) Save audio zoom to preserve audio zoom (name of checkbox changed 5)Profile description updated.

--- a/Obi/Obi/ProfileDesc_en.html
+++ b/Obi/Obi/ProfileDesc_en.html
@@ -95,6 +95,10 @@
   <td>Enable Mouse wheel scrolling</td>
   <td>Lets you enable or disable mouse wheel scrolling for Content view.</td>
 </tr>
+<tr>
+  <td>Show advance properties in properties dialog</td>
+  <td>If checked, advance properties like "Project file count" will be shown in project properties dialog</td>
+</tr>
 </table>
 </div>
 <div id="Intermidate">
@@ -341,7 +345,7 @@
   <td>If checked, Obi will not apply phrase detection on the page phrases while live recording.</td>
 </tr>
 <tr>
-  <td>Save Audio Zoom</td>
+  <td>Preserve Audio Zoom</td>
   <td>If checked, Obi will save the current state of audio zoom across Obi sessions. </td>
 </tr>
 <tr>
@@ -518,7 +522,7 @@
   <td>If checked, Obi will not apply phrase detection on the page phrases while live recording.</td>
 </tr>
 <tr>
-  <td>Save Audio Zoom</td>
+  <td>Preserve Audio Zoom</td>
   <td>If checked, Obi will save the current state of audio zoom across Obi sessions. </td>
 </tr>
 </table>
@@ -970,6 +974,10 @@
   <td>Show cursor time in Transport Bar in stop state</td>
   <td>If checked, the Time Display field of Transport Bar shows the current cursor time in the stopped state. Otherwise, this field will always show 0 in the stopped state. Please note that this feature works only for the Elapsed in phrase and the Elapsed in Section options of Time Display.</td>
 </tr>
+<tr>
+  <td>Record in first empty phrase with record section command</td>
+  <td>If checked, Obi will start recording from the first phrase of the section when selection is at section level</td>
+</tr>
 </table>
 <p>Project Tab:-</p>
 <table  border="3">
@@ -1028,6 +1036,10 @@
 <tr>
   <td>Do not minimize Obi with activation of Recording Toolbar</td>
   <td>If checked, Obi window is not minimized when user opens the Recording Toolbar.</td>
+</tr>
+<tr>
+  <td>Warn before section manipulation</td>
+  <td>If checked,user will be warned before edit operations like Rename,Cut,Paste and Delete</td>
 </tr>
 <tr>
   <td>Disable collapse of selected section in TOC View</td>
