--- a/trunk/Obi/Obi/ProfileDesc_en.html
+++ b/trunk/Obi/Obi/ProfileDesc_en.html
@@ -345,7 +345,7 @@
   <td>If checked, Obi will not apply phrase detection on the page phrases while live recording.</td>
 </tr>
 <tr>
-  <td>Preserve Audio Zoom</td>
+  <td>Preserve Audio Zoom for Content View </td>
   <td>If checked, Obi will save the current state of audio zoom across Obi sessions. </td>
 </tr>
 <tr>
@@ -522,7 +522,7 @@
   <td>If checked, Obi will not apply phrase detection on the page phrases while live recording.</td>
 </tr>
 <tr>
-  <td>Preserve Audio Zoom</td>
+  <td>Preserve Audio Zoom for Content View</td>
   <td>If checked, Obi will save the current state of audio zoom across Obi sessions. </td>
 </tr>
 </table>
